--- a/package.json
+++ b/package.json
@@ -33,10 +33,10 @@
     "eslint": "8.44.0",
     "eslint-config-next": "13.4.9",
     "lucide-react": "^0.259.0",
-    "next": "13.4.9",
+    "next": "^13.5.6",
     "next-themes": "^0.2.1",
-    "openai": "^3.3.0",
-    "postcss": "8.4.25",
+    "openai": "^4.26.0",
+    "postcss": "^8.4.33",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-hook-form": "^7.45.1",
