--- a/package.json
+++ b/package.json
@@ -35,7 +35,7 @@
     "lucide-react": "^0.259.0",
     "next": "^13.5.6",
     "next-themes": "^0.2.1",
-    "openai": "^4.26.0",
+    "openai": "^3.3.0",
     "postcss": "^8.4.33",
     "react": "18.2.0",
     "react-dom": "18.2.0",
@@ -53,6 +53,7 @@
     "zustand": "^4.3.9"
   },
   "devDependencies": {
+    "encoding": "^0.1.13",
     "prisma": "^5.0.0"
   }
 }
